<resources>
    <string name="app_name">First News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="first_news">First news</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="favorites">Favorite</string>
    <string name="nav_connect">Connect</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="search_hint">search news</string>
    <string name="connected_to_internet">Connected to Internet</string>
    <string name="disconnected_from_internet">Not connected to internet</string>
    <string name="settings">settings</string>
    <string name="server_error">Server error</string>
    <string name="server_unknown">Bad request. Please check provided options or spelling.</string>
    <string name="malformed_request">Bad request</string>
    <string name="unauthorized_request">Authorization is required!</string>
    <string name="not_found_request">Request Not found.</string>
    <string name="connection_success">connected</string>
    <string name="category">Category</string>
    <string name="date">07:07:2018</string>
    <string name="content">Content</string>
    <string name="name">John</string>
    <string name="url">Url</string>
    <string name="tags">Tags</string>
    <string name="author">By Author</string>
    <string name="section">Section</string>
    <string name="path_lookup">Path lookup</string>
    <string name="favorite_fragment">Favorite</string>
    <string name="filter_search_endpoint">Filter Search Endpoint</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="endpoint_search">search</string>
    <string name="endpoint_sections">sections</string>
    <string name="endpoint_tags">tags</string>
    <string name="contributor">-tags?contributor</string>
    <string name="protocol">https</string>
    <string name="state_msg">setState()</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="news_image">news image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_search_label">Search</string>
    <string name="setting_search_string">news</string>
    <string name="settings_search_key" translatable="false">search</string>
    <string name="settings_search_default" translatable="false">news</string>
    <string name="settings_page_number_label">Pages number</string>
    <string name="settings_page_number_key" translatable="false">page</string>
    <string name="settings_page_number_default" translatable="false">10</string>
    <string name="settings_page_size_label">Pages size</string>
    <string name="settings_page_size_key" translatable="false">page-size</string>
    <string name="settings_page_size_default" translatable="false">10</string>
    <string name="settings_section_label">Section</string>
    <string name="settings_section_key" translatable="false">section</string>
    <string name="settings_section_default" translatable="false">news</string>
    <string name="settings_show_references_search_label">Show references</string>
    <string name="settings_show_references_search_key" translatable="false">show-references</string>
    <string name="settings_show_references_search_default" translatable="false">0</string>
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_label</string>
    <string name="settings_order_by_start_date_key" translatable="false">from-date</string>
    <string name="settings_order_by_start_date_label">From date</string>
    <string name="settings_order_by_start_date_value" translatable="false">date</string>
    <string name="settings_order_by_end_date_key" translatable="false">to-date</string>
    <string name="settings_order_by_end_date_label">To date</string>
    <string name="settings_order_by_end_date_value" translatable="false">date</string>
    <string name="settings_show_references_key" translatable="false">show-references</string>
    <string name="settings_show_references_key_label">Show preferences</string>
    <string name="settings_show_references_key_value" translatable="false"> </string>
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
    <string name="settings_content_label">Content search</string>
    <string name="settings_content_key" translatable="false">content search</string>
    <string name="settings_tag_label">Tag search</string>
    <string name="settings_tag_key" translatable="false">tag search</string>
    <string name="settings_general_options_label">General settings</string>
    <string name="settings_general_options_key" translatable="false">general settings</string>
    <string name="settings_local_storage_key">backup</string>
    <string name="settings_local_storage_label">Backup</string>
    <string name="settings_local_storage_sum">Backup</string>
    <string name="settings_local_storage_default">true</string>
    <string name="settings_query_images_key">show-fields</string>
    <string name="settings_query_images_label">Show images</string>
    <string name="settings_query_images_default" translatable="false">true</string>
    <string name="settings_query_content_key">show-content</string>
    <string name="settings_query_content_label">Show content</string>
    <string name="settings_query_content_default" translatable="false">false</string>
    <string name="settings_query_tag_key">show-tag</string>
    <string name="settings_query_tag_label">Show by tag</string>
    <string name="settings_query_tag_default" translatable="false">false</string>
    <string name="settings_query_default_key">show-default</string>
    <string name="settings_query_default_label">Show default</string>
    <string name="settings_query_default_default" translatable="false">true</string>
    <string name="settings_section_books_value" translatable="false">books</string>
    <string name="settings_section_business_value" translatable="false">business</string>
    <string name="settings_section_business_to_business_value" translatable="false">business-to-business</string>
    <string name="settings_child_books_site_value" translatable="false">childrens-books-site</string>
    <string name="settings_section_cities_value" translatable="false">cities</string>
    <string name="settings_section_culture_value" translatable="false">culture</string>
    <string name="settings_section_education_value" translatable="false">education</string>
    <string name="settings_section_environment_value" translatable="false">environment</string>
    <string name="settings_section_extra_value" translatable="false">extra</string>
    <string name="settings_section_fashion_value" translatable="false">fashion</string>
    <string name="settings_section_films_value" translatable="false">film</string>
    <string name="settings_section_football_value" translatable="false">football</string>
    <string name="settings_section_global_development_value" translatable="false">global-development</string>
    <string name="settings_section_government_computing_network_value" translatable="false">government-computing-network</string>
    <string name="settings_section_guardian_professional_value" translatable="false">guardian-professional</string>
    <string name="settings_section_healthcare_network_value" translatable="false">healthcare-network</string>
    <string name="settings_section_help_value" translatable="false">help</string>
    <string name="settings_section_higher_education_network_value" translatable="false">higher-education-network</string>
    <string name="settings_section_housing_network_value" translatable="false">housing-network</string>
    <string name="settings_section_inequality_value" translatable="false">inequality</string>
    <string name="settings_section_info_value" translatable="false">info</string>
    <string name="settings_section_jobsadvice_value" translatable="false">jobsadvice</string>
    <string name="settings_section_katine_value" translatable="false">katine</string>
    <string name="settings_section_law_value" translatable="false">law</string>
    <string name="settings_section_leeds_value" translatable="false">leeds</string>
    <string name="settings_section_lifeandstyle_value" translatable="false">lifeandstyle</string>
    <string name="settings_section_local_value" translatable="false">local</string>
    <string name="settings_section_media_value" translatable="false">media</string>
    <string name="settings_section_membership_value" translatable="false">membership</string>
    <string name="settings_section_money_value" translatable="false">money</string>
    <string name="settings_section_music_value" translatable="false">music</string>
    <string name="settings_section_news_value" translatable="false">news</string>
    <string name="settings_section_politics_value" translatable="false">politics</string>
    <string name="settings_section_science_value" translatable="false">science</string>
    <string name="settings_section_search_value" translatable="false">search</string>
    <string name="settings_section_society_value" translatable="false">society</string>
    <string name="settings_section_sport_value" translatable="false">sport</string>
    <string name="settings_section_stage_value" translatable="false">stage</string>
    <string name="settings_section_technology_value" translatable="false">technology</string>
    <string name="settings_section_theguardian_value" translatable="false">theguardian</string>
    <string name="settings_section_theobserver_value" translatable="false">theobserver</string>
    <string name="settings_section_travel_value" translatable="false">travel</string>
    <string name="settings_section_travel_offers_value" translatable="false">travel/offers</string>
    <string name="settings_section_tv_and_radio_value" translatable="false">tv-and-radio</string>
    <string name="settings_section_weather_value" translatable="false">weather</string>
    <string name="settings_section_world_value" translatable="false">world</string>
    <string name="settings_author_value" translatable="false">author</string>
    <string name="settings_bisac_prefix_value" translatable="false">bisac-prefix</string>
    <string name="settings_esa_cricket_match_value" translatable="false">esa-cricket-match</string>
    <string name="settings_esa_football_match_value" translatable="false">esa-football-match</string>
    <string name="settings_esa_football_team_value" translatable="false">esa-football-team</string>
    <string name="settings_esa_football_tournament_value" translatable="false">esa-football-tournament</string>
    <string name="settings_isbn_value" translatable="false">isbn</string>
    <string name="settings_imdb_value" translatable="false">imdb</string>
    <string name="settings_music_brainz_value" translatable="false">musicbrainz</string>
    <string name="settings_music_brainz_genre_value" translatable="false">musicbrainzgenre</string>
    <string name="settings_opta_cricket_match_value" translatable="false">opta-cricket-match</string>
    <string name="settings_check_box_default">default</string>
    <string name="backup_on">backup is on</string>
</resources>