<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.example.nucle.firstnewsapi.settings.SettingsFragments"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/settings_content_label">
        <extra
            android:name="settings"
            android:value="@string/settings_content_key" />
    </header>

    <header
        android:fragment="com.example.nucle.firstnewsapi.settings.SettingsFragments"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/settings_tag_label">
        <extra
            android:name="settings"
            android:value="@string/settings_tag_key" />
    </header>

    <header
        android:fragment="com.example.nucle.firstnewsapi.settings.GeneralSettingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings_general_options_label">

        <extra
            android:name="settings"
            android:value="@string/settings_general_options_key" />
    </header>

</preference-headers>

