<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_connect_arrows_black_24dp"
            android:title="@string/nav_connect" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
        </menu>
    </item>
</menu>
