<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="1"
        android:title="@string/favorites"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/fav_fragment"
        android:actionLayout="@layout/search_chips"
        android:orderInCategory="2"
        android:title="@string/favorite_fragment"
        app:showAsAction="collapseActionView|never" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="3"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>